@@ -2,6 +2,7 @@ Revision history for Pod-Loom
 
 0.05   NOT
 	- Handle =encoding directive
+	- Added bugtracker attribute to Template::Default
 
 0.04   December 11, 2010
 	- Use S<C<< >>> instead of \xA0
